gcc/testsuite/g++.dg/cpp1z/direct-enum-init2.C
// DR 2374
// { dg-do compile { target c++17 } }

enum class Orange;
enum class Apple;

extern Orange o;
Apple a{o}; // { dg-error "cannot convert" }
